# GtkApp

./: CMakeLists.txt  README.md
assets/: myGuiFile.glade  window_main.glade~
inc/: definitions.h  gui_app.h  gui_app_wrapper.h
src/: gui_app.cpp  gui_app_wrapper.cpp
